--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Happy Rose Day!</title>
+    <title>Promise Day!</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
